@@ -2,6 +2,7 @@
 ========
  * bug fixes
  * "cannot redeclare class" errors is now gone. Can also be avoid by using readonly_protection (unavailable with /dev/zero).
+ * fixes SEGV with Zend Debugger
 
 3.0.1 2013-01-11
 ========
